# validation

./: .gitignore  pyproject.toml
.github/workflows/: update-version.yml  validation_tradeflow_pypi.yml  validation_tradeflow_test_pypi.yml
tradeflow/: validation.py
tradeflow/data/: signs-20240720.txt
